# MoonTown

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: Tree.gltf  Tree3.gltf  avatar_model_test.gltf  avatar_model_test_16x16_scale1.gltf  avatar_model_test_16x16_scale16.gltf  creative_map.gltf  creative_map2.gltf  creative_map3.gltf  creative_map_simple.gltf  creative_map_simple2.gltf  creative_map_simple3.gltf  map_test_tree.gltf  nulMap1.gltf  nulMap2.gltf  nulMap3.gltf  nulMap4.gltf  player.gltf  playground.gltf  playtest_map.gltf  playtest_map_24x24_scale1.gltf  playtest_map_24x24_scale16.gltf  playtest_map_24x24_scale1_test.gltf  pokeball.gltf  stress_map_65536x65536.gltf  tree2.gltf  tree_birch.gltf  triangle_simple.gltf  triangle_simple_1.gltf  triangle_simple_2.gltf  two_polygons.glb  two_polygons.gltf
src/: character_controller_original.rs.bkp  main.rs  plugins.rs  spawners.rs  update.rs  utils.rs
src/game_plugins/: mod.rs
src/game_plugins/camera/: mod.rs  systems.rs
src/game_plugins/inputs/: mod.rs  systems.rs
src/game_plugins/physics/: mod.rs
src/game_plugins/player/: components.rs  mod.rs  systems.rs
src/game_plugins/shared/: components.rs  mod.rs
src/game_plugins/ui/: components.rs  mod.rs  (+1 more)
src/plugins/: additional_crate_ui.rs  animation.rs  app_state.rs  char_controller.rs  cursor_as_movement.rs  debug.rs  egui.rs  fps.rs  iyes_perf_ui.rs  keyboard.rs  light.rs  load_gltf_one_poly_at_a_time.rs  lost_player.rs  pause.rs  player.rs  pokeball.rs  screenshot.rs  setup_map.rs  setup_map_2.rs  skybox.rs  spawn_terrain.rs
(+5 files in other folders)
