[package]
name = "basic_game_1"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["bevy_dev_tools"] }
bevy_ecs = "0.15.2"
bevy_egui = "0.32.0"
chrono = "0.4.39"
rand = "0.8.5"

[dependencies.async-std]
version = "1.13.0"
default-features = true
features = ["std"]
